# Libft

./: .gitignore  CMakeLists.txt  Makefile  README.md  author
includes/: ft_printf.h  ft_queue.h  ft_stack.h  libft.h
sources/: flags.c  float.c  float_helpers.c  float_nan_inf.c  float_operations.c  float_toa.c  float_write_long.c  ft_abs.c  ft_atoi.c  ft_atoi_base.c  ft_atol.c  ft_btol.c  ft_bzero.c  ft_chrcmp.c  ft_get_nb_size.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isnotprint.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstcreate.c  ft_lstdel.c  ft_lstdelone.c  ft_lstfirst.c  ft_lstfree.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_ltoa_base.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  (+67 more)
